--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url: jdbc:mysql://host:3360/project?characterEncoding=utf8
+spring.datasource.username: howmuch
+spring.datasource.password: howmuch
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
