JdbcMemberRepository + Bean 교체

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url: jdbc:mysql://host:3360/project?characterEncoding=utf8
-spring.datasource.username: howmuch
-spring.datasource.password: howmuch
-spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/Toy_Project_SpringBoot?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=howmuch
+spring.datasource.password=howmuch
